fix buffer (without z-index), code formatting

--- a/example/range-slider-flat.css
+++ b/example/range-slider-flat.css
@@ -27,7 +27,6 @@
     background: #FFFFFF;
     position: absolute;
     top: 0;
-    z-index: 2;
 }
 
 .rangeSlider__handle {
@@ -39,7 +38,6 @@
     height: 21px;
     position: absolute;
     top: -7px;
-    z-index: 3;
     background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(0, 0, 0, 0.1)));
     background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1));
     background-image: -moz-linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1));
@@ -94,7 +92,6 @@ input[type="range"]:focus + .rangeSlider .rangeSlider__handle {
 }
 
 .rangeSlider__buffer {
-    z-index: 1;
     position: absolute;
     top: 2px;
     height: 4px;
